# URL-shortener

./: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
djangoProject1/: settings.py  urls.py
shorten/: models.py  serializers.py  views.py
shorten/migrations/: 0001_initial.py  0002_alter_shorturl_complete_url_alter_shorturl_short_url.py  0003_alter_shorturl_short_url.py  0004_alter_shorturl_complete_url.py  0005_alter_shorturl_short_url.py
