[tool.poetry]
name = "djangoproject1"
version = "0.1.0"
description = ""
authors = ["Ehsan Barkhordar <barkhordar.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
psycopg2 = "^2.9.3"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
djangorestframework = "^3.13.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
